# Basic-zk-SNARK-framework-using-arkWorks

./: .gitignore  Cargo.toml  README.md  circuit.txt  invalid_circuit.txt  issue.md  wrong.txt
circuits/: private_transfer.circ  transfer.circ  transfer.inputs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App1.tsx  index.tsx
frontend/src/pages/: CreateTransaction.tsx  Dashboard.tsx  TransactionList.tsx
src/: account.rs  api.rs  lib.rs  main.rs  mempool.rs  parser.rs  proof.rs
