[package]
name = "zk-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-relations = "0.5.0" # No explicit features here for now

# Enable the "tracing" feature for ark-groth16; this should propagate
# to enable the "tracing" feature in its dependency ark-relations.
ark-groth16 = { version = "0.5.0", features = ["tracing"] }

ark-std = { version = "0.5.0", default-features = false, features = ["print-trace", "getrandom"] }
ark-crypto-primitives = { version = "0.5.0", features = ["snark"] }

rand = "0.8.5"

# Add tracing crates directly for your main.rs subscriber setup
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10.9"
