[package]
name = "zk-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-relations = "0.5.0" # No explicit features here for now

# Enable the "tracing" feature for ark-groth16; this should propagate
# to enable the "tracing" feature in its dependency ark-relations.
ark-groth16 = { version = "0.5.0", features = ["tracing"] }

ark-std = { version = "0.5.0", default-features = false, features = ["print-trace", "getrandom"] }
ark-crypto-primitives = { version = "0.5.0", features = ["snark"] }

# Web framework and HTTP
axum = "0.7"
tokio = { version = "1.0", features = ["full", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

rand = "0.8.5"

# Add tracing crates directly for your main.rs subscriber setup
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10.9"

# Environment variables
dotenv = "0.15"
