[package]
name = "zk-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use consistent versions for ark-* crates
ark-bls12-381 = "0.5"
ark-groth16 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-crypto-primitives = "0.5"
ark-serialize = "0.5"

# Utilities
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Added hex dependency
hex = "0.4"

# Added bincode dependency
bincode = "1.3"
